--- a/ext-rating-1/index.html
+++ b/ext-rating-1/index.html
@@ -62,7 +62,7 @@
 	</g>
 
 </svg>
-<input type="search" class='search-input'>
+<input type="search" class='search-input' placeholder='Search topics and reviews'>
       </div>
       
       <div class="reviev-section">
