--- a/ext-rating-1/index.html
+++ b/ext-rating-1/index.html
@@ -79,10 +79,10 @@
         />
       </div>
 
-      <div class="reviev-section">
-        <div class="reviev-title">Rewievs</div>
-        <div class="reviev-row">
-          <div class="reviev-number">5</div>
+      <div class="review-section">
+        <div class="review-title">Reviews</div>
+        <div class="review-row">
+          <div class="review-number">5</div>
           <svg
             class="star-icon"
             version="1.1"
@@ -105,11 +105,11 @@ c-1.532-1.494-0.687-4.096,1.431-4.403l12.091-1.757c0.841-0.122,1.568-0.65,1.944-
 C22.602,0.567,25.338,0.567,26.285,2.486z"
             />
           </svg>
-          <div class="reviev-bar"></div>
-          <div class="reviev-count">106</div>
+          <div class="review-bar"></div>
+          <div class="review-count">106</div>
         </div>
       </div>
-      <div class="reviev-btn"></div>
+      <div class="review-btn"></div>
     </div>
   </body>
 </html>
