Connect JS average

--- a/ext-rating-1/index.html
+++ b/ext-rating-1/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="script.js" />
+    <script src="script.js" defer></script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -45,7 +46,7 @@
 	C22.602,0.567,25.338,0.567,26.285,2.486z"
               />
             </svg>
-            4.8
+            <div data-avarage-review></div>
           </div>
 
           Avarage customer rating
