--- a/multistep-form/index.html
+++ b/multistep-form/index.html
@@ -11,7 +11,7 @@
   <body>
     <form action="">
       <div class="card" data-step="1">
-        <h3 class='step-title'>This is step 1</h3>
+        <h3 class="step-title">This is step 1</h3>
         <div class="form-group">
           <label for="email">Email</label>
 
@@ -24,9 +24,42 @@
         </div>
         <button type="button">Next</button>
       </div>
-      <div class="card" data-step="2"></div>
+      <div class="card" data-step="2">
+        <h3 class="step-title">This is step 2</h3>
+        <div class="form-group">
+          <label for="name">Name</label>
+
+          <input type="name" name="name" id="name" />
+        </div>
+        <div class="form-group">
+          <label for="city">City</label>
+
+          <input type="city" name="city" id="city" />
+        </div>
+        <div class="form-group">
+            <label for="facebook">Facebook</label>
+  
+            <input type="facebook" name="facebook" id="facebook" />
+          </div>
+
+        <button type="button">Previous</button>
+        <button type="button">Next</button>
+      </div>
       <div class="card" data-step="3">
-        <button>Submit</button>
+        <h3 class="step-title">This is step 3</h3>
+        <div class="form-group">
+          <label for="phone">Phone</label>
+
+          <input type="phone" name="phone" id="phone" />
+        </div>
+        <div class="form-group">
+          <label for="address">Address</label>
+
+          <input type="address" name="address" id="address" />
+        </div>
+        <button type="button">Previous</button>
+
+        <button type="button">Submit</button>
       </div>
     </form>
   </body>
