Move through steps

--- a/multistep-form/index.html
+++ b/multistep-form/index.html
@@ -22,7 +22,7 @@
 
           <input type="password" name="password" id="password" />
         </div>
-        <button type="button">Next</button>
+        <button type="button" data-next>Next</button>
       </div>
       <div class="card" data-step>
         <h3 class="step-title">This is step 2</h3>
@@ -42,8 +42,8 @@
           <input type="facebook" name="facebook" id="facebook" />
         </div>
 
-        <button type="button">Previous</button>
-        <button type="button">Next</button>
+        <button type="button" data-previous>Previous</button>
+        <button type="button" data-next>Next</button>
       </div>
       <div class="card" data-step>
         <h3 class="step-title">This is step 3</h3>
@@ -57,7 +57,7 @@
 
           <input type="address" name="address" id="address" />
         </div>
-        <button type="button">Previous</button>
+        <button type="button" data-previous>Previous</button>
 
         <button type="button">Submit</button>
       </div>
