--- a/multistep-form/index.html
+++ b/multistep-form/index.html
@@ -15,7 +15,7 @@
         <div class="form-group">
           <label for="email">Email</label>
 
-          <input type="email" name="email" id="email" />
+          <input type="email" required name="email" id="email" />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
