--- a/sidebar-one/index.html
+++ b/sidebar-one/index.html
@@ -17,28 +17,28 @@
 
             </div>
             <ul class='list'>
-                <li class='list-item'><a href="#">
+                <li class='list-item active' style='--color: orangered'><a href="#">
 
                     <span class='icon'>
                         <ion-icon name='home-outline'></ion-icon>
                     </span>
                     <span class='text'>Home</span>
                 </a></li>
-                <li class='list-item'><a href="#">
+                <li class='list-item' style='--color: green'><a href="#">
 
                     <span class='icon'>
                         <ion-icon name='alert-outline'></ion-icon>
                     </span>
                     <span class='text'>About</span>
                 </a></li>
-                <li class='list-item'><a href="#">
+                <li class='list-item' style='--color: blue'><a href="#">
 
                     <span class='icon'>
                         <ion-icon name='grid-outline'></ion-icon>
                     </span>
                     <span class='text'>Portfolio</span>
                 </a></li>
-                <li class='list-item'><a href="#">
+                <li class='list-item' style='--color: purple'><a href="#">
 
                     <span class='icon'>
                         <ion-icon name='call-outline'></ion-icon>
