--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+      defer
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
@@ -11,55 +16,62 @@
   <body>
     <section class="container-fixed">
       <div class="logo">
-        <p style="color: green">^</p>
+        <p style="color: green">l</p>
         <p style="color: yellow">\</p>
         <p style="color: blue">\</p>
       </div>
       <div class="nav-block">
         <nav id="navbar">
-          <ul class="nav-menu">
-            <li class="nav-menu-list"><a href="#">Home</a></li>
+          <ul class="nav-menu sizing">
             <li class="nav-menu-list"><a href="#welcome-section">About</a></li>
             <li class="nav-menu-list"><a href="#projects">Portfolio</a></li>
             <li class="nav-menu-list"><a href="#contact">Contact</a></li>
+            <li class="nav-menu-list"><a href="#container-footer">O7</a></li>
           </ul>
-        
         </nav>
         <nav class="burg">
           <input type="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
-           <div class="footer-nav-block">
-        <div id="footer-nav">
-          <ul class="footernav-menu">
-            <li class="footer-nav-menu-list"><a href="#">Home</a></li>
-            <li class="footer-nav-menu-list">
-              <a href="#welcome-section">About</a>
-            </li>
-            <li class="footer-nav-menu-list">
-              <a href="#projects">Portfolio</a>
-            </li>
-            <li class="footer-nav-menu-list">
-              <a href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-      </div>
+          <div class="footer-nav-block">
+            <div id="footer-nav">
+              <ul class="footernav-menu sizing">
+                <li class="footer-nav-menu-list">
+                  <a href="#welcome-section">About</a>
+                </li>
+                <li class="footer-nav-menu-list">
+                  <a href="#projects">Portfolio</a>
+                </li>
+                <li class="footer-nav-menu-list">
+                  <a href="#contact">Contact</a>
+                </li>
+                <li class="footer-nav-menu-list">
+                  <a href="#container-footer">O7</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
       <div class="nav-footer">
-        <ul class="nav-menu2">
-            <li class="nav-menu-list"><a href="#">Home</a></li>
-            <li class="nav-menu-list"><a href="#welcome-section">About</a></li>
-            <li class="nav-menu-list"><a href="#projects">Portfolio</a></li>
-            <li class="nav-menu-list"><a href="#contact">Contact</a></li>
-          </ul>
-     </div>
+        <ul class="nav-social">
+          <li class="nav-social-list">
+            <a href="#">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li class="nav-social-list">
+            <a href="#">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="container-content">
       <section id="welcome-section">
         <div class="wellcome-header">
-          <h1>Lorem ipsum</h1>
+          <h1>About me</h1>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet
             nostrum assumenda minus magni enim nam tenetur porro accusamus quia
@@ -70,11 +82,67 @@
       </section>
 
       <section id="projects" class="project-tile">
-        <div class="project-grid"></div>
+        <div class="portfolio-title">
+          <h1>Portfolio</h1>
+          <h2>Ideas</h2>
+          <h3>Here is some ideas of projects, which may help land first job</h3>
+        </div>
+        <div class="project-grid">
+          <div class="project-image">
+            <img
+              src="https://via.placeholder.com/300x200"
+              alt="project-image"
+            />
+            <p>Here is some ideas of projects, which may help land first job</p>
+          </div>
+          <div class="project-image">
+            <img
+              src="https://via.placeholder.com/300x200"
+              alt="project-image"
+            />
+            <p>Here is some ideas of projects, which may help land first job</p>
+          </div>
+          <div class="project-image">
+            <img
+              src="https://via.placeholder.com/300x200"
+              alt="project-image"
+            />
+            <p>Here is some ideas of projects, which may help land first job</p>
+          </div>
+          <div class="project-image">
+            <img
+              src="https://via.placeholder.com/300x200"
+              alt="project-image"
+            />
+            <p>Here is some ideas of projects, which may help land first job</p>
+          </div>
+        </div>
       </section>
 
-      <section id="contact"></section>
+      <section id="contact">
+        <div class="project-grid2">
+          <h1>Lets talk</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet
+            nostrum assumenda minus magni enim nam tenetur porro accusamus quia
+            sunt beatae sed saepe veritatis eveniet fugiat, dolorem libero
+            facere. Earum.
+          </p>
+        </div>
+      </section>
     </section>
   </body>
-  <footer></footer>
+  <footer>
+    <section id="container-footer">
+      <div class="footer-content">
+        <h1>Conclusion</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet nostrum
+          assumenda minus magni enim nam tenetur porro accusamus quia sunt
+          beatae sed saepe veritatis eveniet fugiat, dolorem libero facere.
+          Earum.
+        </p>
+      </div>
+    </section>
+  </footer>
 </html>
