--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -51,7 +51,7 @@
       <div class="nav-footer">
         <ul class="nav-social">
           <li class="nav-social-list">
-            <a href="https://www.facebook.com/aykyiv" target='_blank'>
+            <a href="https://www.facebook.com/aykyiv" target="_blank">
               <svg
                 fill="
                 var(--main-font-color)"
@@ -68,7 +68,7 @@
           </li>
 
           <li class="nav-social-list">
-            <a href="https://www.linkedin.com/in/aykyiv/" target='_blank'>
+            <a href="https://www.linkedin.com/in/aykyiv/" target="_blank">
               <svg
                 fill="
                 var(--main-font-color)"
@@ -101,7 +101,7 @@
               <g clip-path="url(#clip0)" transform="translate(-1632 -390)">
                 <path
                   d="M1740 484.693 1740 557 1742 557 1742 484.435C1741.39 484.602 1740.75 484.693 1740.09 484.693ZM1740 463.635 1740 465.937 1740.09 465.935C1740.75 465.935 1741.39 466.025 1742 466.195L1742 463.467C1741.38 463.579 1740.74 463.635 1740.09 463.635ZM1742 427 1740 427 1740 435.129 1740.09 435.127C1740.74 435.127 1741.38 435.185 1742 435.297Z"
-                  fill="#F05B72"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
@@ -121,7 +121,7 @@
                 />
                 <path
                   d="M1686.06 410.849C1694.79 415.292 1697.26 426.767 1692.5 435.095L1673.33 468.69 1710 468.69 1710 471 1669.38 471 1690.52 433.94C1694.62 426.756 1692.59 416.737 1685 412.901L1684.97 412.885 1684.94 412.868C1677.69 408.634 1668.3 411.177 1664.12 418.513L1661.98 422.259 1660 421.103 1662.14 417.357C1666.95 408.931 1677.72 406 1686.06 410.849"
-                  fill="#F05B72"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
@@ -131,7 +131,7 @@
                 />
                 <path
                   d="M1726.82 472.707 1726.28 473 1725.2 470.951 1726.21 470.402C1726.41 470.292 1726.61 470.18 1726.82 470.065ZM1676 390 1707.09 390C1729.38 390 1747.86 407.404 1750 429.493L1747.7 429.493C1745.57 408.688 1728.11 392.324 1707.09 392.324L1676 392.324Z"
-                  fill="#FF0088"
+                  fill="blue"
                   fill-rule="evenodd"
                 />
                 <path
@@ -141,12 +141,12 @@
                 />
                 <path
                   d="M1666.86 399.297C1652.79 399.297 1641.29 410.866 1641.29 425.001 1641.29 439.135 1652.79 450.703 1666.86 450.703L1668 450.703 1668 453 1666.86 453C1651.53 453 1639 440.403 1639 425.001 1639 409.599 1651.53 397 1666.86 397L1668 397 1668 399.297Z"
-                  fill="#F05B72"
+                  fill="yellow"
                   fill-rule="evenodd"
                 />
                 <path
                   d="M1724.42 442.552 1705.72 442.552C1701.47 442.552 1698 439.055 1698 434.775 1698 430.495 1701.47 427 1705.72 427L1749.71 427C1749.83 427.77 1749.92 428.54 1750 429.312L1726.72 429.312 1705.72 429.312C1702.74 429.312 1700.29 431.772 1700.29 434.775 1700.29 437.778 1702.74 440.238 1705.72 440.238L1726.72 440.238 1726.72 510.701C1726.72 528.467 1712.28 543 1694.63 543L1680 543 1680 540.688 1694.63 540.688C1711.01 540.688 1724.42 527.191 1724.42 510.701Z"
-                  fill="#FF7AB8"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
@@ -156,7 +156,7 @@
                 />
                 <path
                   d="M1673.18 519.629 1665.08 528.01C1661.44 531.776 1661.44 537.941 1665.08 541.706 1668.72 545.471 1674.68 545.471 1678.32 541.706L1679.85 540.121 1683 540.121 1679.89 543.335C1675.39 548 1668.02 548 1663.51 543.335 1659 538.671 1659 531.045 1663.51 526.381L1671.61 518Z"
-                  fill="#FF7AB8"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
@@ -166,7 +166,7 @@
                 />
                 <path
                   d="M1676 390 1666.35 390C1647.46 390 1632 405.525 1632 424.5 1632 443.474 1647.46 459 1666.35 459L1668.23 459 1668.23 456.693 1666.35 456.693C1648.72 456.693 1634.3 442.201 1634.3 424.5 1634.3 406.797 1648.72 392.307 1666.35 392.307L1676 392.307Z"
-                  fill="#FF0088"
+                  fill="blue"
                   fill-rule="evenodd"
                 />
                 <path
@@ -176,17 +176,17 @@
                 />
                 <path
                   d="M1740 433C1749.39 433 1757 440.388 1757 449.501 1757 458.613 1749.39 466 1740 466L1740 463.707C1748.08 463.707 1754.64 457.348 1754.64 449.501 1754.64 441.653 1748.08 435.293 1740 435.293Z"
-                  fill="#F05B72"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
                   d="M1740 464C1746.63 464 1752 469.15 1752 475.5 1752 481.852 1746.63 487 1740 487L1740 484.735C1745.32 484.735 1749.64 480.6 1749.64 475.5 1749.64 470.399 1745.32 466.265 1740 466.265Z"
-                  fill="#F05B72"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
                 <path
                   d="M1658 471 1671.19 522 1673 520.151 1660.29 471Z"
-                  fill="#FF7AB8"
+                  fill="#F9AA8F"
                   fill-rule="evenodd"
                 />
               </g>
@@ -194,11 +194,10 @@
           </div>
           <h1>Software developer...</h1>
           <p>
-            ...that offers a versatile skill-set, including full-stack
-            development, design, and photography. I often find myself diving
-            into the front-end development of projects - and I'm passionate
-            about creating clean, accessible, and easy-to-use digital
-            experiences.
+            ...that offers a versatile skill-set, including, design and
+            full-stack development. I often find myself diving into the
+            front-end development of projects - and I'm passionate about
+            creating clean, accessible, and easy-to-use digital experiences.
           </p>
         </div>
       </section>
@@ -214,16 +213,24 @@
           >
             Ideas
           </h2>
-          <h3>Here are some of the latest projects I`m developing.</h3>
+          <h3>Here are some of the exciting projects to work on</h3>
         </div>
         <div class="project-grid">
           <div class="project-image">
             <img src="img/img-1.jpg" alt="project-image" />
             <h4>Sport gambling site dashboard</h4>
+            <p>
+              Fun fact - about 69% of men in the world make sports bets at least
+              once.
+            </p>
           </div>
           <div class="project-image">
             <img src="img/img-2.jpg" alt="project-image" />
             <h4>Online cinema site theme</h4>
+            <p>
+              On earth every Saturday, over 500 million people watch movies
+              online
+            </p>
           </div>
           <div class="project-image">
             <img src="img/img-3.jpg" alt="project-image" />
@@ -238,12 +245,31 @@
 
       <section id="contact">
         <div class="project-grid2">
-          <h1>Lets talk</h1>
+          <h1>Ask me!</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet
-            nostrum assumenda minus magni enim nam tenetur porro accusamus quia
-            sunt beatae sed saepe veritatis eveniet fugiat, dolorem libero
-            facere. Earum.
+            Anyone can learn how to program as long as they invest enough time
+            and effort. <br />
+            A lot of free information helps to go through. It is similar to
+            learning a foreign language; one way of doing it is to read a lot of
+            books. The first page may be complex, with many new words, so try
+            not to get lost. Ensure that every piece is in its place, not just
+            one page cut off from the book. In the end, you may show it to your
+            friend, talk about it with them and work on it.
+          </p>
+          <ol>
+            Stuck? Try this out:
+            <li>Do you have a plan for how you solve a problem?</li>
+
+            <li>
+              Can it be solved by dividing the problem into smaller pieces?
+            </li>
+            <li>Do you solve everything you can in your issue?</li>
+          </ol>
+          <p>
+            Still, stuck and do not know what to do? Feel free to write me via
+            social networks, which you can find on this page. Working on
+            projects with friends is a lot of fun, and in the end, I believe you
+            can do much more for your community.
           </p>
         </div>
       </section>
@@ -254,10 +280,23 @@
       <div class="footer-content">
         <h1>Conclusion</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet nostrum
-          assumenda minus magni enim nam tenetur porro accusamus quia sunt
-          beatae sed saepe veritatis eveniet fugiat, dolorem libero facere.
-          Earum.
+          The syntax is easy, but learning to code and keeping it up to date is
+          a must-have to have much more time for the actual programming. HTML
+          and CSS give strong fundamentals of how programming work; also you can
+          see the results of learning and improve it. <br /><br />
+          The
+          <a
+            href="https://www.freecodecamp.org/"
+            style="color: var(--secondary-color)"
+          >
+            FreeCodeCamp</a
+          >
+          is a LEGENDARY resource. The general context helps gain fundamental
+          knowledge of the main parts of HTML and CSS. Gain skills by pushing to
+          repeat thousand times same element, so you remember them forever. All
+          the details to make sure everything works just fine for me. And in the
+          end, they give knowledge for free, a community ready to help most
+          people at any time. Massive respect; you are doing great!
         </p>
       </div>
     </section>
