--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -10,6 +10,32 @@
   </head>
 
   <body>
+    <input type="checkbox" class="toggler" />
+    <div class="hamburger"><div></div></div>
+     <nav id="navbar"> <div class="footer-nav-block">
+        <div id="footer-nav">
+          <ul class="footernav-menu sizing">
+            <li class="footer-nav-menu-list">
+              <a href="#welcome-section">About</a>
+            </li>
+            <li class="footer-nav-menu-list">
+              <a href="#projects">Portfolio</a>
+            </li>
+            <li class="footer-nav-menu-list">
+              <a href="#contact">Contact</a>
+            </li>
+            <li class="footer-nav-menu-list">
+              <a href="#container-footer">O7</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </nav>
+      <div class="back-on-top">
+        <div class="to-top">
+          <a href="#">⇡</a>
+        </div>
+      </div>
     <section class="container-fixed">
       <div class="logo">
         <p style="color: green">l</p>
@@ -17,35 +43,13 @@
         <p style="color: blue">\</p>
       </div>
       <div class="nav-block">
-        <nav id="navbar">
+        <nav class="navbar-fixed">
           <ul class="nav-menu sizing">
             <li class="nav-menu-list"><a href="#welcome-section">About</a></li>
             <li class="nav-menu-list"><a href="#projects">Portfolio</a></li>
             <li class="nav-menu-list"><a href="#contact">Contact</a></li>
             <li class="nav-menu-list"><a href="#container-footer">O7</a></li>
           </ul>
-        </nav>
-        <nav class="burg">
-          <input type="checkbox" class="toggler" />
-          <div class="hamburger"><div></div></div>
-          <div class="footer-nav-block">
-            <div id="footer-nav">
-              <ul class="footernav-menu sizing">
-                <li class="footer-nav-menu-list">
-                  <a href="#welcome-section">About</a>
-                </li>
-                <li class="footer-nav-menu-list">
-                  <a href="#projects">Portfolio</a>
-                </li>
-                <li class="footer-nav-menu-list">
-                  <a href="#contact">Contact</a>
-                </li>
-                <li class="footer-nav-menu-list">
-                  <a href="#container-footer">O7</a>
-                </li>
-              </ul>
-            </div>
-          </div>
         </nav>
       </div>
       <div class="nav-footer">
@@ -211,22 +215,22 @@
               text-shadow: 2px 2px 8px rgb(249, 170, 143);
             "
           >
-            Ideas
+           <a href="https://www.freecodecamp.org/areyall" id='profile-link' target='_blank'>Ideas</a>
           </h2>
           <h3>Here are some of the exciting projects to work on</h3>
         </div>
         <div class="project-grid">
           <div class="project-image">
             <img src="img/img-1.jpg" alt="project-image" />
-            <h4>Sport gambling site dashboard</h4>
+            <h4 class='project-tile'>Sport gambling site dashboard</h4>
             <p>
               Fun fact - about 69% of men in the world make sports bets at least
-              once.
+              once
             </p>
           </div>
           <div class="project-image">
             <img src="img/img-2.jpg" alt="project-image" />
-            <h4>Online cinema site theme</h4>
+            <h4 class='project-tile'>Online cinema site theme</h4>
             <p>
               On earth every Saturday, over 500 million people watch movies
               online
@@ -234,11 +238,16 @@
           </div>
           <div class="project-image">
             <img src="img/img-3.jpg" alt="project-image" />
-            <h4>Cryptocurrency exchange dashboard</h4>
+            <h4 class='project-tile'>Cryptocurrency exchange dashboard</h4>
+            <p>
+              Cmon it`s 21 century
+             </p>
           </div>
           <div class="project-image">
             <img src="img/img-4.jpg" alt="project-image" />
-            <h4>Support task manager</h4>
+            <h4 class='project-tile'>Support task manager</h4><p>
+              Grandmother's printer is gonna be fixed
+            </p>
           </div>
         </div>
       </section>
@@ -249,7 +258,7 @@
           <p>
             Anyone can learn how to program as long as they invest enough time
             and effort. <br />
-            A lot of free information helps to go through. It is similar to
+            A lot of free information helps to go through. This is similar to
             learning a foreign language; one way of doing it is to read a lot of
             books. The first page may be complex, with many new words, so try
             not to get lost. Ensure that every piece is in its place, not just
