--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <title>Personal Portfolio Ideas</title>
   </head>
@@ -12,7 +13,8 @@
   <body>
     <input type="checkbox" class="toggler" />
     <div class="hamburger"><div></div></div>
-     <nav id="navbar"> <div class="footer-nav-block">
+    <nav id="navbar">
+      <div class="footer-nav-block">
         <div id="footer-nav">
           <ul class="footernav-menu sizing">
             <li class="footer-nav-menu-list">
@@ -30,12 +32,12 @@
           </ul>
         </div>
       </div>
-      </nav>
-      <div class="back-on-top">
-        <div class="to-top">
-          <a href="#">⇡</a>
-        </div>
+    </nav>
+    <div class="back-on-top">
+      <div class="to-top">
+        <a href="#">⇡</a>
       </div>
+    </div>
     <section class="container-fixed">
       <div class="logo">
         <p style="color: green">l</p>
@@ -96,8 +98,8 @@
           <h2>Who am I?</h2>
           <div class="avatar-photo">
             <svg
-              width
-              height
+              width="187"
+              height="187"
               id="capa1"
               viewBox="-10 0 187 187"
               style="enable-background: new 0 0 47.94 47.94"
@@ -215,14 +217,19 @@
               text-shadow: 2px 2px 8px rgb(249, 170, 143);
             "
           >
-           <a href="https://www.freecodecamp.org/areyall" id='profile-link' target='_blank'>Ideas</a>
+            <a
+              href="https://www.freecodecamp.org/areyall"
+              id="profile-link"
+              target="_blank"
+              >Ideas</a
+            >
           </h2>
           <h3>Here are some of the exciting projects to work on</h3>
         </div>
         <div class="project-grid">
           <div class="project-image">
             <img src="img/img-1.jpg" alt="project-image" />
-            <h4 class='project-tile'>Sport gambling site dashboard</h4>
+            <h4 class="project-tile">Sport gambling site dashboard</h4>
             <p>
               Fun fact - about 69% of men in the world make sports bets at least
               once
@@ -230,7 +237,7 @@
           </div>
           <div class="project-image">
             <img src="img/img-2.jpg" alt="project-image" />
-            <h4 class='project-tile'>Online cinema site theme</h4>
+            <h4 class="project-tile">Online cinema site theme</h4>
             <p>
               On earth every Saturday, over 500 million people watch movies
               online
@@ -238,16 +245,13 @@
           </div>
           <div class="project-image">
             <img src="img/img-3.jpg" alt="project-image" />
-            <h4 class='project-tile'>Cryptocurrency exchange dashboard</h4>
-            <p>
-              Cmon it`s 21 century
-             </p>
+            <h4 class="project-tile">Cryptocurrency exchange dashboard</h4>
+            <p>Cmon it`s 21 century</p>
           </div>
           <div class="project-image">
             <img src="img/img-4.jpg" alt="project-image" />
-            <h4 class='project-tile'>Support task manager</h4><p>
-              Grandmother's printer is gonna be fixed
-            </p>
+            <h4 class="project-tile">Support task manager</h4>
+            <p>Grandmother's printer is gonna be fixed</p>
           </div>
         </div>
       </section>
@@ -306,6 +310,24 @@
           the details to make sure everything works just fine for me. And in the
           end, they give knowledge for free, a community ready to help most
           people at any time. Massive respect; you are doing great!
+        </p>
+      </div>
+    </section>
+
+    <section id="stay-with-ukraine">
+      <div class="swu-content">
+        <h1 style='font-size: 1.5em;'>
+          Stay with <span style="color: blue">Ukr</span
+          ><span style="color: yellow">aine</span>
+        </h1>
+        <p style='font-size: 0.7em;'>
+          I`m writing from Kyiv, the capital of a country at war, a country
+          being attacked and invaded from all sides. Russian president makes it
+          clear that he wants to destroy the Ukrainian state and the sovereignty
+          of its people. We must face reality and have the courage to draw the
+          conclusions for our future and that of our children. The peaceful way
+          of life is under threat, the freedom of peoples to make their own
+          decisions is under threat, and so is democracy.
         </p>
       </div>
     </section>
