--- a/sidebar-one/index.html
+++ b/sidebar-one/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <div class="container">
-        <div class="navigation open">
+        <div class="navigation">
             <div class="menu-toggle">
 
             </div>
