--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -228,29 +228,46 @@
         </div>
         <div class="project-grid">
           <div class="project-image">
-            <img src="img/img-1.jpg" alt="project-image" />
-            <h4 class="project-tile">Sport gambling site dashboard</h4>
+            <div class='led-img'>
+              <img src="img/img-1.jpg" alt="project-image" />
+            </div>
+            <h4 class="project-tile">
+              Sport gambling <br />
+              site dashboard
+            </h4>
             <p>
               Fun fact - about 69% of men in the world make sports bets at least
               once
             </p>
           </div>
           <div class="project-image">
-            <img src="img/img-2.jpg" alt="project-image" />
-            <h4 class="project-tile">Online cinema site theme</h4>
+            <div class='led-img'>
+              <img src="img/img-2.jpg" alt="project-image" />
+            </div>
+            <h4 class="project-tile">
+              Online cinema <br />
+              site theme
+            </h4>
             <p>
               On earth every Saturday, over 500 million people watch movies
               online
             </p>
           </div>
           <div class="project-image">
-            <img src="img/img-3.jpg" alt="project-image" />
+            <div class='led-img'>
+              <img src="img/img-3.jpg" alt="project-image" />
+            </div>
             <h4 class="project-tile">Cryptocurrency exchange dashboard</h4>
             <p>Cmon it`s 21 century</p>
           </div>
           <div class="project-image">
-            <img src="img/img-4.jpg" alt="project-image" />
-            <h4 class="project-tile">Support task manager</h4>
+            <div class='led-img'>
+              <img src="img/img-4.jpg" alt="project-image" />
+            </div>
+            <h4 class="project-tile">
+              Support <br />
+              task manager
+            </h4>
             <p>Grandmother's printer is gonna be fixed</p>
           </div>
         </div>
@@ -316,11 +333,11 @@
 
     <section id="stay-with-ukraine">
       <div class="swu-content">
-        <h1 style='font-size: 1.5em;'>
+        <h1 style="font-size: 1.5em">
           Stay with <span style="color: blue">Ukr</span
           ><span style="color: yellow">aine</span>
         </h1>
-        <p style='font-size: 0.7em;'>
+        <p style="font-size: 0.8em">
           I`m writing from Kyiv, the capital of a country at war, a country
           being attacked and invaded from all sides. Russian president makes it
           clear that he wants to destroy the Ukrainian state and the sovereignty
