--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -268,7 +268,7 @@
               Support <br />
               task manager
             </h4>
-            <p>Grandmother's printer is gonna be fixed</p>
+            <p>Grannys printer is gonna be fixed</p>
           </div>
         </div>
       </section>
