--- a/fcc-pto/index.html
+++ b/fcc-pto/index.html
@@ -40,9 +40,11 @@
     </div>
     <section class="container-fixed">
       <div class="logo">
-        <p style="color: green">l</p>
-        <p style="color: yellow">\</p>
-        <p style="color: blue">\</p>
+        <a href="#stay-with-ukraine">
+          <p style="color: green">l</p>
+          <p style="color: yellow">\</p>
+          <p style="color: blue">\</p></a
+        >
       </div>
       <div class="nav-block">
         <nav class="navbar-fixed">
@@ -228,7 +230,7 @@
         </div>
         <div class="project-grid">
           <div class="project-image">
-            <div class='led-img'>
+            <div class="led-img">
               <img src="img/img-1.jpg" alt="project-image" />
             </div>
             <h4 class="project-tile">
@@ -241,7 +243,7 @@
             </p>
           </div>
           <div class="project-image">
-            <div class='led-img'>
+            <div class="led-img">
               <img src="img/img-2.jpg" alt="project-image" />
             </div>
             <h4 class="project-tile">
@@ -254,14 +256,14 @@
             </p>
           </div>
           <div class="project-image">
-            <div class='led-img'>
+            <div class="led-img">
               <img src="img/img-3.jpg" alt="project-image" />
             </div>
             <h4 class="project-tile">Cryptocurrency exchange dashboard</h4>
             <p>Cmon it`s 21 century</p>
           </div>
           <div class="project-image">
-            <div class='led-img'>
+            <div class="led-img">
               <img src="img/img-4.jpg" alt="project-image" />
             </div>
             <h4 class="project-tile">
