--- a/CDTimer/index.html
+++ b/CDTimer/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="flip-card flip">
+    <div class="flip-card">
 <div class="top">4</div>
 <div class="bottom">4</div>
     </div>
