--- a/CDTimer/index.html
+++ b/CDTimer/index.html
@@ -13,11 +13,11 @@
       <div class="container-segment">
         <div class="segment-title">Hours</div>
         <div class="segment">
-          <div class="flip-card">
+          <div class="flip-card" data-hour-tens>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
-          <div class="flip-card">
+          <div class="flip-card" data-hour-ones>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
@@ -26,11 +26,11 @@
       <div class="container-segment">
         <div class="segment-title">Minutes</div>
         <div class="segment">
-          <div class="flip-card">
+          <div class="flip-card" data-minutes-tens>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
-          <div class="flip-card">
+          <div class="flip-card" data-minutes-ones>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
@@ -39,11 +39,11 @@
       <div class="container-segment">
         <div class="segment-title">Second</div>
         <div class="segment">
-          <div class="flip-card">
+          <div class="flip-card" data-seconds-tens>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
-          <div class="flip-card">
+          <div class="flip-card" data-seconds-ones>
             <div class="top">9</div>
             <div class="bottom">9</div>
           </div>
