--- a/CDTimer/index.html
+++ b/CDTimer/index.html
@@ -13,11 +13,11 @@
       <div class="container-segment">
         <div class="segment-title">Hours</div>
         <div class="segment">
-          <div class="flip-card" data-hour-tens>
+          <div class="flip-card" data-hours-tens>
             <div class="top">2</div>
             <div class="bottom">2</div>
           </div>
-          <div class="flip-card" data-hour-ones>
+          <div class="flip-card" data-hours-ones>
             <div class="top">4</div>
             <div class="bottom">4</div>
           </div>
