--- a/CCR/index.html
+++ b/CCR/index.html
@@ -40,6 +40,16 @@
         </div>
         <input type="range" min="1" max="15" id="no-of-people" value="1" />
       </section>
+      <section>
+        <div class="wrapper">
+          <span class="lbl"> Tip Per Person </span>
+          <span id="tip-per-person" class="val"> $0 </span>
+        </div>
+        <div class="wrapper">
+          <span class="lbl"> Total Per Person </span>
+          <span id='total-per-person'>$0</span>
+        </div>
+      </section>
     </div>
   </body>
 </html>
