--- a/CCR/index.html
+++ b/CCR/index.html
@@ -36,7 +36,7 @@
         <input type="range" min="1" id="tip" value="15" data-range />
         <div class="wrapper">
           <label for="no-of-people" class="lbl"> No. of people </label>
-          <span id="spli-num" class="val">0</span>
+          <span id="split-num" class="val">0</span>
         </div>
         <input
           type="range"
