--- a/SW/index.html
+++ b/SW/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucky Speen Wheel</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-
-    
-
+    <div class="wrapper">
+      <div class="container">
+        <canvas id="wheel"></canvas>
+      </div>
+    </div>
   </body>
 </html>
