--- a/SW/index.html
+++ b/SW/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
