--- a/SW/index.html
+++ b/SW/index.html
@@ -17,7 +17,11 @@
     <div class="wrapper">
       <div class="container">
         <canvas id="wheel"></canvas>
-      
+        <button id="spin-btn">Spin</button>
+      </div>
+      <div id="final-value">
+        <p>Click to spin</p>
+      </div>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
