Wheel styles setup

--- a/SW/index.html
+++ b/SW/index.html
@@ -19,6 +19,13 @@
         <canvas id="wheel"></canvas>
         <button id="spin-btn">Spin</button>
       </div>
+      <svg id="arrow-left" viewBox="0 0 48 48">
+        <path
+          class="vi-primary"
+          d="M38,26H18l5,5-3,3L10,24,20,14l3,3-5,5H38v4Z"
+        />
+        <path class="vi-accent" d="M30,22v4h8V22H30Z" />
+      </svg>
       <div id="final-value">
         <p>Click to spin</p>
       </div>
