--- a/SW/index.html
+++ b/SW/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lucky Speen Wheel</title>
+    <title>Lucky Wheel</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
