--- a/wnCCR/index.html
+++ b/wnCCR/index.html
@@ -107,10 +107,10 @@
         <div class="winCalcs">
           <div class="hText"><h2>Enter window parameters</h2></div>
           <div class="products">
-            <div class="winImg winOne none">
+            <div class="winImg winOne ">
               <img src="img/w1-min.png" alt="windowOne" />
             </div>
-            <div class="winImg winTwo ">
+            <div class="winImg winTwo none">
               <img src="img/w2-min.png" alt="windowTwo" />
             </div>
             <div class="winImg winThree none">
