--- a/wnCCR/index.html
+++ b/wnCCR/index.html
@@ -106,7 +106,9 @@
       <section>
         <div class="winCalcs">
           <div class="hText"><h2>Enter window parameters</h2></div>
+          <div class='mesure'>
           <div class="products">
+              
             <div class="winImg winOne">
               <img src="img/w1-min.png" alt="windowOne" />
             </div>
@@ -115,25 +117,6 @@
             </div>
             <div class="winImg winThree none">
               <img src="img/w3-min.png" alt="windowThree" />
-            </div>
-            <div class="wWidth">
-              <form>
-                <input
-                  type="range"
-                  id="wWidth"
-                  name="wSizeW"
-                  min="800"
-                  max="3000"
-                  value="1500"
-                  data-rangeW
-                />
-                <input
-                  type="number"
-                  value="800"
-                  id="wWidthSize"
-                  class="wWidthSize"
-                />
-              </form>
             </div>
             <div class="wHeight">
               <form>
@@ -156,7 +139,28 @@
               </form>
             </div>
           </div>
+          <div class="wWidth">
+            <form>
+              <input
+                type="range"
+                id="wWidth"
+                name="wSizeW"
+                min="800"
+                max="3000"
+                value="1500"
+                data-rangeW
+              />
+              <input
+                type="number"
+                value="800"
+                id="wWidthSize"
+                class="wWidthSize"
+              />
+            </form>
+          </div>
+          
         </div>
+      </div>
       </section>
     </div>
   </body>
